sonar-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: sonarqube
  name: sonarqube
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      containers:
        - name: sonarqube
          image: sonarqube:8.3.1-developer
#          command:
#            - sysctl
#            - -w
#            - vm.max_map_count=262144
          securityContext:
            privileged: true
          resources:
            requests:
              cpu: 500m
              memory: 4Gi
            limits:
              cpu: 2000m
              memory: 4Gi
          volumeMounts:
            - mountPath: "/opt/sonarqube/data/"
              name: sonar-data
            - mountPath: "/opt/sonarqube/extensions/"
              name: sonar-extensions
          ports:
            - containerPort: 9000
              protocol: TCP
      volumes:
        - name: sonar-data
          persistentVolumeClaim:
            claimName: sonar-data
        - name: sonar-extensions
          persistentVolumeClaim:
            claimName: sonar-extensions
