vault-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vault
  name: vault
spec:
  ports:
    - name: vault
      port: 80
      protocol: TCP
      targetPort: 8200
  selector:
    app: vault
  type: LoadBalancer
