vault-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: vault
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - vault.devops-mgt-cluster.com
      secretName: devops-tls-secret
  rules:
    - host: vault.devops.com
      http:
        paths:
          - path: /
            backend:
              serviceName: vault-vault
              servicePort: 8200
